fixed style on mobile and text size and clouds

--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ a {
     justify-content: space-evenly;
     padding: 10px 0; 
     margin: 0;
-    margin-bottom: 10px;
+    
 }
 .toolbar-button {
     background-color: none;
@@ -61,7 +61,8 @@ a {
     min-width: 520px;
     height: 60vh;
     margin: auto;
-    
+    box-sizing: border-box;
+
     padding: 10px;
     
     font-family: 'Apple Garamond Light', 'Times New Roman', Times, serif;
@@ -86,23 +87,12 @@ a {
     bottom: 0;
 }
 
-@media screen and (max-width: 600px) {
-    .header {
-        width: 100vw;
-        margin: 0;
-        min-width: 0px;
-    }
-    .header .title {
-        position: relative;
-        margin: auto;
-    }
-    .content {
-        min-width: 0px;
-    }
-}
+
     
 
 .header .title {
+    box-sizing: border-box;
+    max-width: 100%;
     margin: 0;
     position: absolute;
     top: 50%;
@@ -119,6 +109,8 @@ a {
     margin-left: 10px;
     margin-bottom: 10px;
     font-size: 2.4vh;
+    max-width: 100%;
+    box-sizing: border-box;
 }
 
 .header .links p {
@@ -132,7 +124,7 @@ a {
     min-width: 500px;
     margin: auto;
     padding: 10px;
-
+    font-size: 14pt;
     z-index: 1;
 }
 
@@ -142,10 +134,11 @@ a {
     
 }
 .block h2 {
-    
+    font-size: 22pt;
 }
 .block p {
-    margin-left: 10px;
+    margin-left: 16pt;
+    
 }
 .publication {
     margin-bottom: 5px;
@@ -159,9 +152,31 @@ a {
 
 @keyframes cloudsanim {
     0% {
-        background-size: 100%;
+        background-size: 100% 100%;
     }
     100% {
-        background-size: 120%;
+        background-size: 110% 110%;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    .content {
+        min-width: fit-content;
+    }
+    .header {
+        background-size: 110% 110%;
+    }
+
+@media screen and (max-width: 850px) {
+    .header {
+        width: 100vw;
+        margin: 0;
+        padding:0;
+        min-width: 0px;
+        
+    }
+
+    .content {
+        max-width: 100vw;
     }
 }
